--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,12 +35,11 @@ nav:
       - Quickstart: get-started/quickstart.md
       - Concepts: get-started/concepts.md
     - Sources:
-      - CloudEvents: sources/cloudeventssource.md
       - Amazon CloudWatch: sources/awscloudwatch.md
       - Amazon CloudWatchLogs: sources/awscloudwatchlogs.md
       - Amazon CodeCommit: sources/awscodecommit.md
-      - Amazon Cognito User Pool: sources/awscognitoidentity.md
-      - Amazon Cognito User Pool: sources/awscognitouserpool.md
+      - Amazon Cognito Identity Pools: sources/awscognitoidentity.md
+      - Amazon Cognito User Pools: sources/awscognitouserpool.md
       - Amazon DynamoDB: sources/awsdynamodb.md
       - Amazon EventBridge: sources/awseventbridge.md
       - Amazon Kinesis: sources/awskinesis.md
@@ -55,6 +54,7 @@ nav:
       - Azure Queue Storage: sources/azurequeuestorage.md
       - Azure Service Bus Queue: sources/azureservicebusqueue.md
       - Azure Service Bus Topic: sources/azureservicebustopic.md
+      - CloudEvents: sources/cloudeventssource.md
       - Github: sources/github.md
       - Google Cloud Audit Logs: sources/googlecloudauditlogs.md
       - Google Cloud Billing: sources/googlecloudbilling.md
@@ -154,6 +154,7 @@ nav:
       - Creating a PrivateLink to TriggerMesh Services: guides/triggermesh-privatelink.md
       - Scaling: guides/scaling.md
       - Webhook to Slack: guides/webhook-to-slack.md
+      - Tips for Kubernetes: guides/kubernetestips.md
     - Reference:
       - CLI commands: reference/cli-commands.md
       - Kubernetes CRDs:
