--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,7 +32,7 @@ extra_javascript:
 nav:
     - Home: index.md
     - Get started:
-      - Quickstart: get-started/quickstart.md
+      - Quickstart: get-started/quickstart-v2.md
       - Concepts: get-started/concepts.md
       - Create a local event viewer: get-started/create-local-eventviewer.md
       - Moving from local to Kubernetes: get-started/moving-from-dev-to-K8s.md
@@ -192,6 +192,8 @@ markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true 
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.tasklist:
