add tmctl RC install warning

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -150,6 +150,7 @@ nav:
       - Using Kong with TriggerMesh: guides/kong-ingress.md
       - Using Kuma Mesh with TriggerMesh: guides/kuma.md
       - Using a Kafka Cluster on Digital Ocean: guides/do-kafka.md
+      - Deploying to Digital Ocean App Platform: guides/do-app-platform.md
       - Creating a PrivateLink to TriggerMesh Services: guides/triggermesh-privatelink.md
       - Scaling: guides/scaling.md
       - Webhook to Slack: guides/webhook-to-slack.md
