adds doc version selector dropdown

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -203,6 +203,8 @@ theme:
   - navigation.tracking
 
 extra:
+  version:
+    provider: mike
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/triggermesh
