--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -37,11 +37,46 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+
     - name: Checkout
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.8'
+
+    - name: Install packages
+      run: |
+        git config --global url."https://${{ secrets.MKDOCS_INSIDERS_TOKEN }}@github".insteadOf https://github
+        pip install git+https://github.com/squidfunk/mkdocs-material-insiders.git mkdocs-redirects mike
+
+    - name: Configure git credentials
+      run: |
+        git config --global user.name 'TriggerMesh Bot'
+        git config --global user.email 'bot@triggermesh.com'
+
+    - name: Configure DOCS_VERSION
+      id: docs-version
+      run: |
+        [[ "${GITHUB_REF_TYPE}" == "tag" ]] && DOCS_VERSION=${GITHUB_REF_NAME:1}
+        echo "DOCS_VERSION=${DOCS_VERSION:-DEV}" >> $GITHUB_OUTPUT
+
+    - name: Deploy version and push
+      run: |
+        DOCS_VERSION="${{ steps.docs-version.outputs.DOCS_VERSION }}"
+        if [[ "${DOCS_VERSION}" != "DEV" ]]; then
+          mike deploy ${DOCS_VERSION} latest --update-aliases --push
+        else
+          mike deploy ${DOCS_VERSION}
+        fi
+
     - name: Set up Docker Buildx
       id: buildx
       uses: docker/setup-buildx-action@v2
+
     - name: Login to GCR
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v2
@@ -49,6 +84,7 @@ jobs:
         registry: gcr.io
         username: _json_key
         password: ${{ secrets.GCLOUD_SERVICEACCOUNT_KEY }}
+
     - name: Docker metadata
       id: meta
       uses: docker/metadata-action@v4
@@ -57,12 +93,14 @@ jobs:
         tags: |
           type=semver,pattern={{raw}}
           type=sha
-    - name: Build image and push to container registries
+
+    - name: Switch to gh-pages branch
+      run: git checkout gh-pages
+
+    - name: Build and push image
       uses: docker/build-push-action@v3
       with:
         context: .
-        build-args: |
-          MKDOCS_INSIDERS_TOKEN=${{ secrets.MKDOCS_INSIDERS_TOKEN }}
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
