display only shortversions

--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -61,7 +61,7 @@ jobs:
     - name: Configure DOCS_VERSION
       id: docs-version
       run: |
-        [[ "${GITHUB_REF_TYPE}" == "tag" ]] && DOCS_VERSION=${GITHUB_REF_NAME:1}
+        [[ "${GITHUB_REF_TYPE}" == "tag" ]] && DOCS_VERSION=${${GITHUB_REF_NAME:1}%.*}
         echo "DOCS_VERSION=${DOCS_VERSION:-DEV}" >> $GITHUB_OUTPUT
 
     - name: Deploy version and push
